[package]
name = "if_empty"
version = "0.1.0"
authors = ["Christoph Schlosser <christoph@linux.com>"]
edition = "2018"
license = "MPL-2.0"
description = "Replace `if foo.is_empty() { Foo { ... } } else { foo }` with a simple `foo.if_empty(Foo { ... })`"
homepage = "https://github.com/cschlosser/IfEmpty"
repository = "https://github.com/cschlosser/IfEmpty"
readme = "README.md"
keywords = ["empty", "is_empty"]

[dependencies]
