[package]
name = "if_empty"
version = "0.1.0"
authors = ["Christoph Schlosser <christoph@linux.com>"]
edition = "2018"
license = "MPL-2.0"
description = "Replace if/else checks for emptyness simple method call"
homepage = "https://github.com/cschlosser/IfEmpty#ifempty"
repository = "https://github.com/cschlosser/IfEmpty"
readme = "README.md"
keywords = ["empty", "is_empty"]
documentation = "https://docs.rs/if_empty/0.1.0/if_empty/"

[dependencies]
